Freeze layout / page format normalization.

For single-file mail merge this skips the page format normalization,
which would be run during each document / page append.

Instead the normalization / checks are run for the whole document
at the end of the generation, changing this code from O(n2) to
O(n). This way each mail merge generated document uses the same
time, because the target document isn't completely traversed for
each page change.

With my test document this produces the same output, save some
changed internal document IDs.

This fixes fdo#56355.

Change-Id: Ia779705cfb107383341f946542d28434c986591a